--- a/PilActivity/app/src/main/res/values/strings.xml
+++ b/PilActivity/app/src/main/res/values/strings.xml
@@ -1,15 +1,14 @@
 <resources>
     <string name="app_name">PilActivity</string>
-
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_activity2">Activity2</string>
-    <string name="title_activity_activity3">Activity3</string>
+    <string name="title_activity_activity2">Activity 2</string>
+    <string name="title_activity_activity3">Activity 3</string>
     <string name="textActivity1Welcome">Activity 1</string>
     <string name="btnActivity1">Open Activity 2</string>
     <string name="btnActivity2">Open Activity 3</string>
     <string name="textActivity2_Welcome">Activity 2</string>
-    <string name="textViewActivity2Content">testo da activity 2</string>
+    <string name="textViewActivity2Content">Text from activity 2</string>
     <string name="bye">Good bye</string>
-    <string name="title_activity_scorro">scorroActivity</string>
+    <string name="textActivity2Welcome">Activity 3</string>
 </resources>
